--- a/shop.html
+++ b/shop.html
@@ -545,6 +545,7 @@
                   </div>
                   <ul class='menuu'>
                     <li>Low to hight</li>
+                    <li>Low to hight</li>
                     <li>hight to low</li>
                     <li>Top seller</li>
                     <li>New</li>
