--- a/profile.html
+++ b/profile.html
@@ -206,6 +206,24 @@
                         <option value="profile">4</option>
                         <option value="word">5</option>
                         <option value="hashtag">6</option>
+                        <option value="profile">1</option>
+                        <option value="word">2</option>
+                        <option value="hashtag">3</option>
+                        <option value="profile">4</option>
+                        <option value="word">5</option>
+                        <option value="hashtag">6</option>
+                        <option value="profile">1</option>
+                        <option value="word">2</option>
+                        <option value="hashtag">3</option>
+                        <option value="profile">4</option>
+                        <option value="word">5</option>
+                        <option value="hashtag">6</option>
+                        <option value="profile">1</option>
+                        <option value="word">2</option>
+                        <option value="hashtag">3</option>
+                        <option value="profile">4</option>
+                        <option value="word">5</option>
+                        <option value="hashtag">6</option>
                       </select>
                     </div>
                     <div class="center">
@@ -261,7 +279,12 @@
                       </p>
                     </form>
                   </label>
-                  <a href="" class="conf"><span>Comfirm</span></a>
+                 <label for="">
+                  <button type="submit">
+                    submit
+                  </button>
+                 </label>
+               
                 </form>
               </div>
               <div class="pro_right">
