fix display:absolute for col_left

--- a/Product_detail2D.html
+++ b/Product_detail2D.html
@@ -137,6 +137,117 @@
               </div>
             </div>
           </div>
+          <div class="col_right core" style="display: none;">
+            <div class="size_color">
+              <h1>Futo #3038</h1>
+              <span
+                >Owner by
+                <strong> JPEGgyHill </strong>
+              </span>
+              <span>Sold out: 135 </span>
+              <span class="sold">
+                <h3 href="">
+                  <img src="css/icon/Group.svg" alt="" />
+                  13.57 USDC
+                </h3>
+                <del> 24.45 USDC </del>
+                Save 10.88 USDC
+              </span>
+              <div class="type">
+                <a href="">
+                  <img src="css/icon/Group (1).svg" alt="" />
+                  T-shirt
+                </a>
+                <a href="">
+                  <img src="css/icon/hoodie.svg" alt="" />
+                  Hoodie
+                </a>
+                <a href="">
+                  <img src="css/icon/Group (2).svg" alt="" />
+                  Jacket
+                </a>
+              </div>
+              <div class="color">
+                <h3>Color: <strong>Black</strong></h3>
+                <a href="#" class="color1" class="">
+                  <span></span>
+                </a>
+                <a href="#" class="color2">
+                  <span></span>
+                </a>
+                <a href="#" class="color3">
+                  <span></span>
+                </a>
+                <a href="#" class="color4">
+                  <span></span>
+                </a>
+                <a href="#" class="color5">
+                  <span></span>
+                </a>
+              </div>
+              <div class="size">
+                <span>
+                  Size:
+                  <strong> XL </strong>
+                </span>
+                <a href=""> XS </a>
+                <a href=""> S </a>
+                <a href=""> M </a>
+                <a href=""> L </a>
+                <a href=""> XL </a>
+                <a href=""> 2XL </a>
+                <a href=""> 3XL </a>
+              </div>
+              <div class="cart">
+                <label for="quantity">Quantity:</label>
+                <span>
+                  <button onclick="decrement()" class="but">-</button>
+                  <input type="number" id="quantity" value="1" min="1" />
+                  <button onclick="increment()" class="but">+</button>
+                </span>
+              </div>
+            </div>
+            <div class="buy_button">
+              <a href="" class="active">
+                <img src="css/icon/wallet.svg" alt="" />
+                Buy now
+              </a>
+              <a href="">
+                <img src="css/icon/shopping_bag.svg" alt="" />
+                Add to cart
+              </a>
+            </div>
+            <div class="shipping">
+              <span>
+                <img src="css/icon/truck-tick.svg" alt="" />
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting
+                  industry.
+                </p>
+              </span>
+              <span>
+                <img src="css/icon/like.svg" alt="" />
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting
+                  industry.
+                </p>
+              </span>
+              <span>
+                <img src="css/icon/call-calling.svg" alt="" />
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting
+                  industry.
+                </p>
+              </span>
+              <span>
+                <img src="css/icon/clock.svg" alt="" />
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting
+                  industry.
+                </p>
+              </span>
+            </div>
+          </div>
           <div class="detail_row par">
             <h2>Product detail</h2>
             <p>
