--- a/profile.html
+++ b/profile.html
@@ -176,19 +176,19 @@
                   <label for="hoTen">
                     <a>Fullname*</a>
                     <span href="" class="input">
-                      <input type="text" id="hoTen" name="hoTen" required />
+                      <input type="text" id="hoTen" name="hoTen" placeholder="Fullname" required />
                     </span>
                   </label>
                   <label for="email">
                     <a href="">Email*</a>
                     <span href="" class="input">
-                      <input type="email" id="email" name="email" required />
+                      <input type="email" id="email" name="email" placeholder="Email" required />
                     </span>
                   </label>
                   <label for="email">
                     <a>Phone number</a>
                     <span href="" class="input">
-                      <input type="email" id="email" name="email" required />
+                      <input type="email" id="email" name="email"  placeholder=" Phone number" />
                     </span>
                   </label>
                   <label for="ngaySinh">
@@ -279,12 +279,7 @@
                       </p>
                     </form>
                   </label>
-                 <label for="">
-                  <button type="submit">
-                    submit
-                  </button>
-                 </label>
-               
+                 
                 </form>
               </div>
               <div class="pro_right">
