--- a/Thankyou.html
+++ b/Thankyou.html
@@ -180,9 +180,11 @@
               <span>Phone Number:</span>
               0944747444
             </div>
-            <div class="line">
+            <div class="line shipping">
               <span>Shipping Address:</span>
+             <p>
               4517 Washington Ave. Manchester, Kentucky 39495
+             </p>
             </div>
             <div class="line">
               <span>ZIP/Postal Code:</span>
