--- a/checkout.html
+++ b/checkout.html
@@ -89,36 +89,36 @@
               <input type="text" placeholder="City" required="" />
               <div class="select">
                 <select>
-                    <option value="0">State </option>
-                    <option value="1">Audi</option>
-                    <option value="2">BMW</option>
-                    <option value="3">Citroen</option>
-                    <option value="4">Ford</option>
-                    <option value="5">Honda</option>
-                    <option value="6">Jaguar</option>
-                    <option value="7">Land Rover</option>
-                    <option value="8">Mercedes</option>
-                    <option value="9">Mini</option>
-                    <option value="10">Nissan</option>
-                    <option value="11">Toyota</option>
-                    <option value="12">Volvo</option>
+                  <option value="0">State</option>
+                  <option value="1">America</option>
+                  <option value="2">Germany</option>
+                  <option value="3">England</option>
+                  <option value="4">Scotland</option>
+                  <option value="5">Japan</option>
+                  <option value="6">Korea</option>
+                  <option value="7">France</option>
+                  <option value="8">Russia</option>
+                  <option value="9">zcechs</option>
+                  <option value="10">Bulgary</option>
+                  <option value="11">VietNam</option>
+                  <option value="12">Thailand</option>
                   </select>
                   <input type="text" placeholder="Zip" required="" />
               </div>
               <select>
                 <option value="0">Country / Region</option>
-                <option value="1">Audi</option>
-                <option value="2">BMW</option>
-                <option value="3">Citroen</option>
-                <option value="4">Ford</option>
-                <option value="5">Honda</option>
-                <option value="6">Jaguar</option>
-                <option value="7">Land Rover</option>
-                <option value="8">Mercedes</option>
-                <option value="9">Mini</option>
-                <option value="10">Nissan</option>
-                <option value="11">Toyota</option>
-                <option value="12">Volvo</option>
+                <option value="1">America</option>
+                <option value="2">Germany</option>
+                <option value="3">England</option>
+                <option value="4">Scotland</option>
+                <option value="5">Japan</option>
+                <option value="6">Korea</option>
+                <option value="7">France</option>
+                <option value="8">Russia</option>
+                <option value="9">zcechs</option>
+                <option value="10">Bulgary</option>
+                <option value="11">VietNam</option>
+                <option value="12">Thailand</option>
               </select>
             </form>
             <div class="state">
@@ -693,5 +693,5 @@
   <script type="text/javascript" src="slick-1.8.1/slick/slick.min.js"></script>
   <script src="js/search.js"></script>
  <script src="js/slide.js"></script>
- 
+ <script src="js/radio.js"></script>
 </html>
