--- a/seller_order.html
+++ b/seller_order.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/cart.css" />
     <link rel="stylesheet" href="css/checkout.css" />
     <link rel="stylesheet" href="css/seller_order.css" />
-    <script src="https://cdn.jsdelivr.net/npm/@easepick/bundle@1.2.1/dist/index.umd.min.js"></script>
+
   </head>
   <body>
     <header>
@@ -764,6 +764,7 @@
   </body>
   <script src="js/jquery-3.6.0.js"></script>
   <script src="slick-1.8.1/slick/slick.js"></script>
+  <script src="js/espick.js"></script>
   <script src="js/search.js"></script>
   <script src="js/add.js"></script>
   <script src="js/slide.js"></script>
