--- a/profit.html
+++ b/profit.html
@@ -623,8 +623,7 @@
    <script src="js/jquery-3.6.0.js"></script>
    <script src="slick-1.8.1/slick/slick.js"></script>
    <script src="js/search.js"></script>
-   <script src="js/add.js"></script>
-   <script src="js/slide.js"></script>
   <script src="js/date.js"></script>
-  <script src="js/nav-bar.js"></script>
+
+  <script src="js/profile.js"></script>
 </html>
