--- a/profile.html
+++ b/profile.html
@@ -317,7 +317,7 @@
                   
                   </label>
                     <button type="submit">
-                     <span> submit</span>
+                     <span> Submit</span>
                     </button>
                 </form>
               </div>
