--- a/Cart.html
+++ b/Cart.html
@@ -93,7 +93,7 @@
                         <div class="price">           
                             <a href="" ></a>                 
                             <div class="price1">
-                                        <span>32.563 USDC</span>
+                                <span>32.563 USDC</span>
                             </div>
                         </div>
                         <div class="cart_tag">
@@ -111,8 +111,7 @@
                     </div>
                </div>
                <div class="cart_price">
-                <div class="cart">
-                 
+                <div class="cart">    
                     <span>
                       <button onclick="decrement()" class="but">-</button>
                       <input type="number" id="quantity" value="1" min="1" />
@@ -131,7 +130,7 @@
                </div>
             </div>
             <div class="bottom">
-                <a href="" class="lp">
+                <a href="#" class="lp" id="selectAll">
                     <img src="css/icon/all.svg" alt="">
                     select all
                 </a>
@@ -561,4 +560,7 @@
 <script src="js/jquery-3.6.0.js"></script>
 <script src="js/search.js"></script>
 <script src="js/add.js"></script>
+<script src="js/selectall.js">
+
+</script>
 </html>
