--- a/seller_order.html
+++ b/seller_order.html
@@ -262,7 +262,7 @@
             </div>
             <div class="order_list">
               <label for="">
-                <input type="checkbox" name="sport" value="item01" />
+                <input type="checkbox" name="sport" value="item01"  id="selectAll"/>
               </label>
               <span>Order number</span>
               <span class="cus">Customer</span>
@@ -795,4 +795,8 @@
   <script src="js/slide.js"></script>
  <script src="js/date.js"></script>
  <script type="text/javascript" src="js/profile.js"></script>
+ <script src="js/selectall.js">
+ 
+</script>
+
 </html>
