--- a/Cart.html
+++ b/Cart.html
@@ -98,9 +98,17 @@
                         </div>
                         <div class="cart_tag">
                             <div class="add_1">
-                                Black / XL
-                                <a href="">
-                                </a>
+
+                                <select id="customSelect">Black/XL</option>
+                                  <option value="option2">Black/XL</option>
+                                  <option value="option3">Black/XL</option>
+                                  <option value="option2">Black/XL</option>
+                                  <option value="option3">Black/XL</option>
+                                  <option value="option2">Black/XL</option>
+                                  <option value="option3">Black/XL</option>
+                                  <option value="option2">Black/XL</option>
+                                  <option value="option3">Black/XL</option>
+                                </select>
                             </div>
                            <div class="add_2">
                             <a href="" class="l2">
@@ -131,7 +139,7 @@
             </div>
             <div class="bottom">
                 <a href="#" class="lp" id="selectAll">
-                    <img src="css/icon/all.svg" alt="">
+                    <input type="checkbox">
                     select all
                 </a>
                <a href="">delete</a>
