--- a/profile.html
+++ b/profile.html
@@ -108,7 +108,7 @@
                 </a>
            
               </div>
-              <div class="icon">
+              <div class="icon" href="./Cart.html">
                 <a href="./Cart.html">
                   <img src="css/icon/profile-circle.svg" alt="">
                   Payment infomation
