--- a/shop.html
+++ b/shop.html
@@ -85,7 +85,8 @@
           <img src="images/pro1.svg" alt="" />
         </div>
         <div class="para">
-          <h1>Heart and SOL</h1>
+          <h1>
+            <img src="css/icon/Frame 318.png" alt="">Heart and SOL</h1>
           Lorem Ipsum is simply dummy text of the printing and typesetting
           industry. Lorem Ipsum has been the industry's standard dummy text ever
           since the 1500s, when an unknown printer took a galley of type and
@@ -998,7 +999,6 @@
   <script src="js/shop.js"></script>
   <script src="js/search.js"></script>
   <script src="js/nav-bar.js"></script>
-
   <script src="js/filter.js"></script>
   <script src="js/drop_down.js"></script>
 </html>
