--- a/checkout.html
+++ b/checkout.html
@@ -171,10 +171,10 @@
                     value="Standard Express"
                     placeholder=""
                   />
-                  <span>card</span>
+                  <span>Card</span>
                 </div>
                 <div class="price">
-                  <img src="css/icon/american-express.svg" alt="" />
+                  <img src="css/icon/american-express.svg" alt="" class="active"/>
                   <img src="css/icon/visa.svg" alt="" />
                   <img src="css/icon/master-card.svg" alt="" />
                   <img src="css/icon/discover.svg" alt="" />
