--- a/Product_detail3D.html
+++ b/Product_detail3D.html
@@ -102,7 +102,7 @@
               </div>
             </div>
           </div>
-          <div class="col_right">
+          <div class="col_right fake">
             <div class="size_color">
               <h1>Futo #3038</h1>
               <span
